[tool.poetry]
name = "Rock_Paper_Scissors"
version = "0.1.0"
description = "rock paper scissors game with machine learning"
authors = ""

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
